# fpga-zeta

./: .gitignore  DEBUGGING_TODO.md  DESIGN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
host/zetafpga/: __init__.py
host/zetafpga/apps/: __init__.py  criticalline.py  oshunt.py  zeros.py  zfunc.py
host/zetafpga/driver/: __init__.py  backend.py  golden_backend.py  sim_backend.py
host/zetafpga/golden/: __init__.py  cexp.py  expln.py  (+12 more)
rtl/filelists/: common.f  generic-sim.f
scripts/: gen_tables.py  lint.sh
tb/: conftest.py
tb/common/: mpf_stim.py  runner.py
tb/engine/: test_backend_equiv.py  test_zeta_engine.py
tb/fn/: test_cexp_pipe.py  test_exp_mpf.py  test_fft_radix2.py  test_log_mpf.py  test_sincos_turns.py  test_theta_turns.py
tb/fx/: test_fx_mul_mod1.py
tb/mp/: test_limb_addsub.py  test_limb_mul.py  test_limb_mul_ks.py  test_limb_shift.py  test_mpf_add.py  test_mpf_mul.py  test_mpf_recip.py
tb/prim/: test_lzc.py  test_skid_buffer.py
tb/zeta/: test_euler_maclaurin.py  test_npow_s_kernel.py  test_os_grid_sum.py  test_rs_power_sum.py  test_rs_power_sum_tiled.py  test_rs_z_unit.py
tests/: test_apps.py  test_golden_expln.py  test_golden_fft.py  test_golden_fn.py  test_golden_limb.py  test_golden_mpfloat.py  test_golden_npow.py  test_golden_os_pipe.py  test_golden_recip.py  test_golden_rs.py  test_golden_rs_pipe.py  test_golden_rs_z.py  test_golden_theta.py  test_golden_zeta_em.py  test_os_multieval.py  test_package.py
tools/coeffgen/: gen_cexp.py  gen_expln.py  gen_fft.py  gen_rsck.py  gen_sincos.py  gen_theta.py
(+91 files in other folders)
